--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,8 +2,8 @@
   "name": "Scratch Platformer",
   "short_name": "Platformer",
   "description": "A fun platformer game with core mechanics and controller support.",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/scratch-platformer",
+  "scope": "/scratch-platformer",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#000000",
